src/tests/fixtures/typename/PropertyTypenameNonStringInitializer.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export class User {
  __typename = 1 as const;
  /** @gqlField */
  name: string = "Alice";
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/typename/PropertyTypenameNonStringInitializer.ts:3:16 - error: Expected `__typename` property initializer to be a string literal. For example: `__typename = "MyType"` or `__typename: "MyType";`. This lets Grats know that the GraphQL executor will be able to derive the type of the object at runtime.

3   __typename = 1 as const;
                 ~
